--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-v0-project",
+  "name": "multithreaded-proxy-server-ui",
   "version": "0.1.0",
   "private": true,
+  "description": "Frontend dashboard for a Java-based multithreaded HTTP proxy server.",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -69,5 +70,7 @@
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
-  }
+  },
+  "author": "Sumit Kumar",
+  "license": "MIT"
 }
